--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-flash-message": "^1.0.8"
+    "react-flash-message": "^1.0.8",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
